[package]
name = "axml_parser"
version = "0.1.0"
authors = ["Julien Gamba <julien@jgamba.eu>"]
edition = "2021"
license = "Apache-2.0"
description = "A parser for Android AXML files"
homepage = "https://github.com/rusty-rs/rusty-axml"
repository = "https://github.com/rusty-rs/rusty-axml"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
clap = { version = "4.5.4", features = ["derive"] }
quick-xml = "0.31.0"
zip = "0.5"
